Updated dropdown menus and other changes

--- a/all-touch-targets-must-be-24px-large-or-leave-sufficient-space.html
+++ b/all-touch-targets-must-be-24px-large-or-leave-sufficient-space.html
@@ -51,7 +51,7 @@
 
     <label for="page-selector">Navigate to an axe Dev Tools violation example:</label>
     <select id="page-selector" name="pages" onchange="navigateToPage();">
-        <option value="index.html">Choose page</option>
+        <option value="">Choose page</option>
     <option value="https://docs.google.com/spreadsheets/d/10l-2BBD04bYrQtaHIk8hfwpSbB9QVkf5PAJd5ARTaQQ/edit?gid=0#gid=0">
         View the axe Dev Tools Google spreadsheet
     </option>
@@ -61,7 +61,7 @@
     <option value="https://sitelint-testing.github.io/every-rule/">
         Switch to the SiteLint testing suite
     </option>
-    <option value="https://sitelint-testing.github.io/every-rule/">
+    <option value="https://sitelint-testing.github.io/arc-toolkit/">
         Switch to the ARC Toolkit testing suite
     </option>
 <option value="accesskey-attribute-value-should-be-unique.html">1. Accesskey Attribute Value Should Be Unique</option>
