--- a/documents-must-have-title-element-to-aid-in-navigation.html
+++ b/documents-must-have-title-element-to-aid-in-navigation.html
@@ -63,7 +63,7 @@
     <option value="https://sitelint-testing.github.io/every-rule/">
         Switch to the SiteLint testing suite
     </option>
-    <option value="https://sitelint-testing.github.io/every-rule/">
+    <option value="https://sitelint-testing.github.io/arc-toolkit/">
         Switch to the ARC Toolkit testing suite
     </option>
 <option value="accesskey-attribute-value-should-be-unique.html">1. Accesskey Attribute Value Should Be Unique</option>
