PM-876-improve script logic on all Pages

--- a/ids-used-in-aria-and-labels-must-be-unique.html
+++ b/ids-used-in-aria-and-labels-must-be-unique.html
@@ -11,9 +11,16 @@
             function onPageLoaded() {
                 w.clearTimeout(t);
                 w.removeEventListener('DOMContentLoaded', onPageLoaded);
-
+                
                 function loadSiteLintAuditor() {
-                    m.parentNode.insertBefore(a, m);
+                    if (m && m.parentNode) {
+                        m.parentNode.insertBefore(a, m);
+                    } else {
+                        const headOrBody = document.head;
+                        if (headOrBody) {
+                            headOrBody.appendChild(a);
+                        }
+                    }
                 }
                 w.setTimeout(loadSiteLintAuditor, 3500);
             }
