--- a/html-element-must-have-a-lang-attribute.html
+++ b/html-element-must-have-a-lang-attribute.html
@@ -12,9 +12,16 @@
             w.clearTimeout(t);
             w.removeEventListener('DOMContentLoaded', onPageLoaded);
 
-            function loadSiteLintAuditor() {
-                m.parentNode.insertBefore(a, m);
-            }
+                function loadSiteLintAuditor() {
+                    if (m && m.parentNode) {
+                        m.parentNode.insertBefore(a, m);
+                    } else {
+                        const headOrBody = document.head;
+                        if (headOrBody) {
+                            headOrBody.appendChild(a);
+                        }
+                    }
+                }
             w.setTimeout(loadSiteLintAuditor, 3500);
         }
         function onAuditorLoaded(){
