--- a/scrollable-region-must-have-keyboard-access.html
+++ b/scrollable-region-must-have-keyboard-access.html
@@ -72,18 +72,18 @@
 
     <label for="page-selector">Navigate to an axe Dev Tools violation example:</label>
     <select id="page-selector" name="pages" onchange="navigateToPage();">
-        <option value="index.html">Choose page</option>
+        <option value="index.html">Choose an axe Dev Tools test page</option>
     <option value="https://docs.google.com/spreadsheets/d/10l-2BBD04bYrQtaHIk8hfwpSbB9QVkf5PAJd5ARTaQQ/edit?gid=0#gid=0">
-        View the axe Dev Tools Google spreadsheet
+        Spreadsheet for axe Dev Tools
     </option>
     <option value="https://dequeuniversity.com/rules/axe/html/4.9">
-        View the full list of axe Dev Tools rules
+        Rules for axe Dev Tools
     </option>
     <option value="https://sitelint-testing.github.io/every-rule/">
-        Switch to the SiteLint testing suite
+        Go to SiteLint
     </option>
     <option value="https://sitelint-testing.github.io/arc-toolkit/">
-        Switch to the ARC Toolkit testing suite
+        Go to ARC Toolkit
     </option>
 <option value="accesskey-attribute-value-should-be-unique.html">1. Accesskey Attribute Value Should Be Unique</option>
 <option value="active-area-elements-must-have-alt-text.html">2. Active Area Elements Must Have Alt Text</option>
