Updated dropdown menus and other changes

--- a/aria-attributes-must-conform-to-valid-values.html
+++ b/aria-attributes-must-conform-to-valid-values.html
@@ -63,19 +63,20 @@
 
     <label for="page-selector">Navigate to an axe Dev Tools violation example:</label>
     <select id="page-selector" name="pages" onchange="navigateToPage();">
-        <option value="index.html">Choose page</option>
-      <option value="https://docs.google.com/spreadsheets/d/10l-2BBD04bYrQtaHIk8hfwpSbB9QVkf5PAJd5ARTaQQ/edit?gid=0#gid=0">
-          View the axe Dev Tools Google spreadsheet
-      </option>
-      <option value="https://dequeuniversity.com/rules/axe/html/4.9">
-          View the full list of axe Dev Tools rules
-      </option>
-      <option value="https://sitelint-testing.github.io/every-rule/">
-          Switch to the SiteLint testing suite
-      </option>
-      <option value="https://sitelint-testing.github.io/arc-toolkit/">
-          Switch to the ARC Toolkit testing suite
-      </option>
+        <option value="index.html">Choose an axe Dev Tools test page</option>
+    <option value="https://docs.google.com/spreadsheets/d/10l-2BBD04bYrQtaHIk8hfwpSbB9QVkf5PAJd5ARTaQQ/edit?gid=0#gid=0">
+        Spreadsheet for axe Dev Tools
+    </option>
+    <option value="https://dequeuniversity.com/rules/axe/html/4.9">
+        Rules for axe Dev Tools
+    </option>
+    <option value="https://sitelint-testing.github.io/every-rule/">
+        Go to SiteLint
+    </option>
+    <option value="https://sitelint-testing.github.io/arc-toolkit/">
+        Go to ARC Toolkit
+    </option>
+
   <option value="accesskey-attribute-value-should-be-unique.html">1. Accesskey Attribute Value Should Be Unique</option>
   <option value="active-area-elements-must-have-alt-text.html">2. Active Area Elements Must Have Alt Text</option>
   <option value="all-page-content-should-be-contained-by-landmarks.html">3. All Page Content Should Be Contained By Landmarks</option>
